@@ -136,7 +136,7 @@ SOURCE=..\lklist.c
 # End Source File
 # Begin Source File
 
-SOURCE=.\lkmain.c
+SOURCE=..\lkmain.c
 # End Source File
 # Begin Source File
 
@@ -172,6 +172,10 @@ SOURCE=..\lksym.c
 # End Source File
 # Begin Source File
 
+SOURCE=..\sdld.c
+# End Source File
+# Begin Source File
+
 SOURCE=..\..\asxxsrc\strcmpi.c
 # End Source File
 # End Group
@@ -192,6 +196,10 @@ SOURCE=..\getline.h
 # End Source File
 # Begin Source File
 
+SOURCE=..\lk_readnl.h
+# End Source File
+# Begin Source File
+
 SOURCE=..\lkar.h
 # End Source File
 # Begin Source File
@@ -201,6 +209,10 @@ SOURCE=..\lklibr.h
 # Begin Source File
 
 SOURCE=..\lkrel.h
+# End Source File
+# Begin Source File
+
+SOURCE=..\sdld.h
 # End Source File
 # End Group
 # End Target
